Finalizei a parte de suporte

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <H2>Precisa de ajuda?</h2>
                 <p>Entre em contato com: (19) 99261-2529
                 <p>ou pelo email: <a href="malito">nicolasguimaraes.34261@aprendiz.patrulheiros.org.br</a></p>
-                <p>Acesse também o nosso Instagram: <a href="https://www.instagram.com/casatech_campinas/">@casatech_campinas</a></p>
+                <p>Acesse também o nosso Instagram: <a href="https://www.instagram.com/casatech_campinas/"><img class="insta" src="InstaIcon.png"></img> @casatech_campinas</a></p>
             </div>
         </section>
 
