--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                 <p>Entre em contato com: (19) 99261-2529
                 <p>ou pelo email: <a href="malito">nicolasguimaraes.34261@aprendiz.patrulheiros.org.br</a></p>
                 <p>Acesse também o nosso Instagram: <a href="https://www.instagram.com/casatech_campinas/"><img class="insta" src="InstaIcon.png"></img> @casatech_campinas</a></p>
-                <p>Venha conhecer a nossa matriz: </p>
+                <p>Venha conhecer a nossa matriz: Avenida Emancipação, 719 - Parque dos Pinheiros CEP: 13184-654
+</p>
             </div>
         </section>
 
